[gd_scene load_steps=21 format=3 uid="uid://cn3thcd5cirdy"]

[ext_resource type="Texture2D" uid="uid://d772i5qcg42r" path="res://images/aroeira.png" id="1_oayy7"]
[ext_resource type="Script" path="res://source/body_hitbox.gd" id="2_ixong"]
[ext_resource type="Script" path="res://scenes/debug/scripts_debug/on_screen.gd" id="3_g7gcc"]
[ext_resource type="Script" path="res://source/components/motion_component.gd" id="3_q6jg1"]
[ext_resource type="Script" path="res://source/components/health_component.gd" id="4_plydy"]
[ext_resource type="Script" path="res://source/components/combat_component.gd" id="5_hld7x"]
[ext_resource type="Script" path="res://source/states/state_machine.gd" id="6_arddw"]
[ext_resource type="Script" path="res://scenes/debug/scripts_debug/enemy_state_idle02.gd" id="7_xrhbl"]
[ext_resource type="Script" path="res://scenes/debug/scripts_debug/enemy_state_roll.gd" id="8_p76ub"]
[ext_resource type="Script" path="res://source/states/enemy_state_die_01.gd" id="9_sjicr"]

[sub_resource type="Animation" id="Animation_63bfe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gvnm2"]
resource_name = "idle_left"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_u1r0n"]
resource_name = "idle_right"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_i7ux6"]
resource_name = "run_right"
length = 0.600005
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_sy4vi"]
resource_name = "run_left"
length = 0.600005
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4xu3m"]
_data = {
"RESET": SubResource("Animation_63bfe"),
"idle-left": SubResource("Animation_gvnm2"),
"idle-right": SubResource("Animation_u1r0n"),
"run-left": SubResource("Animation_i7ux6"),
"run-right": SubResource("Animation_sy4vi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rj4h7"]
size = Vector2(6, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjelc"]
size = Vector2(6, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fapfa"]
size = Vector2(9, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwo2c"]
size = Vector2(102, 20)

[node name="Tronquinho" type="CharacterBody2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle-right"
libraries = {
"": SubResource("AnimationLibrary_4xu3m")
}

[node name="EnemySprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_oayy7")
offset = Vector2(0, -8.5)
hframes = 10
vframes = 3

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_rj4h7")

[node name="BodyHitbox" type="Area2D" parent="." node_paths=PackedStringArray("combat")]
position = Vector2(0, -5)
collision_layer = 64
collision_mask = 4
script = ExtResource("2_ixong")
combat = NodePath("../Components/CombatComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyHitbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_hjelc")
debug_color = Color(0.396078, 0, 0.00784314, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -5.5)
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_fapfa")
debug_color = Color(0, 0.0745098, 0.662745, 0.419608)

[node name="PlayerDetect" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource("RectangleShape2D_iwo2c")

[node name="on_screen" type="VisibleOnScreenNotifier2D" parent="." node_paths=PackedStringArray("character_body")]
script = ExtResource("3_g7gcc")
character_body = NodePath("..")

[node name="Components" type="Node" parent="."]

[node name="MotionComponent" type="Node" parent="Components"]
script = ExtResource("3_q6jg1")
max_speed = 46.0
max_fall_speed = 500.0
looking_direction = Vector2(-1, 0)

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("4_plydy")
max_health = 2

[node name="CombatComponent" type="Node" parent="Components" node_paths=PackedStringArray("motion", "health")]
script = ExtResource("5_hld7x")
motion = NodePath("../MotionComponent")
health = NodePath("../HealthComponent")
attack_damage = 0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_arddw")
initial_state = NodePath("EnemyStateIdle02")

[node name="EnemyStateIdle02" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "motion", "animation_player")]
script = ExtResource("7_xrhbl")
character_body = NodePath("../..")
motion = NodePath("../../Components/MotionComponent")
animation_player = NodePath("../../AnimationPlayer")

[node name="EnemyStateRoll" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "motion", "animation_player")]
script = ExtResource("8_p76ub")
character_body = NodePath("../..")
motion = NodePath("../../Components/MotionComponent")
max_roll = 160.0
animation_player = NodePath("../../AnimationPlayer")

[node name="EnemyStateDie01" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "health", "animation_player")]
script = ExtResource("9_sjicr")
character_body = NodePath("../..")
health = NodePath("../../Components/HealthComponent")
animation_player = NodePath("../../AnimationPlayer")

[connection signal="body_entered" from="PlayerDetect" to="StateMachine/EnemyStateIdle02" method="_on_player_detect_body_entered"]
[connection signal="screen_exited" from="on_screen" to="on_screen" method="_on_screen_exited"]
